--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
-* Sam Kingston / sjkingo - https://github.com/sjkingo
-* Connor Shearwood / Drakekin - https://github.com/Drakekin
+* Sam Kingston / @sjkingo - https://github.com/sjkingo
+* Connor Shearwood / @Drakekin - https://github.com/Drakekin
+* Yannik Ammann / @yannik-ammann
